Update path to save model

--- a/notebooks/spacy_custom_ner.1.01.ipynb
+++ b/notebooks/spacy_custom_ner.1.01.ipynb
@@ -189,7 +189,7 @@
     }
    ],
    "source": [
-    "!python -m spacy train ./spacy_configs/config.cfg --output ../models/output --paths.train ../data/processed/train.spacy --paths.dev ../data/processed/train.spacy"
+    "!python -m spacy train ./spacy_configs/config.cfg --output ../api/models/output --paths.train ../data/processed/train.spacy --paths.dev ../data/processed/train.spacy"
    ]
   },
   {
